Refactor for easier maintenance and extension.